chore: update volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "3080:3080"
     container_name: backend
     volumes:
-      - ./api:/usr/src/app/api
-      - /usr/src/app/api/node_modules
+      - ./backend:/usr/src/app/backend
+      - /usr/src/app/backend/node_modules
   frontend:
     build:
       context: ./frontend
