--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@google-cloud/pubsub": "^2.12.0",
     "@google-cloud/secret-manager": "^3.6.0",
     "@google-cloud/storage": "^5.8.5",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1"
   },
