--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,10 @@ COPY package*.json ./
 
 RUN npm install
 
+ADD . /usr/src/app/frontend
+
+RUN npm run build
+
 EXPOSE 3000
 
 CMD ["npm", "run", "start"]
