wip: updating template

--- a/Vision.Frontend/tsconfig.json
+++ b/Vision.Frontend/tsconfig.json
@@ -15,12 +15,10 @@
     "jsx": "preserve",
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["./*"],
-      "@/tests/*": ["tests/*"],
-      "@/types/*": ["types/*"],
-      "@/services/*": ["services/*"],
-      "@/helpers/*": ["helpers/*"],
-      "@/shared/*": ["shared/*"]
+      "@*": ["./*"],
+      "@types/*": ["types/*"],
+      "@services/*": ["services/*"],
+      "@shared/*": ["shared/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
