chore: website deploy action

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -13,6 +13,7 @@ jobs:
 
       - name: Install & Build
         run: |
+          cd ./Frontend.Website
           npm install --production
           npm run build
 
