--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,6 +17,12 @@ jobs:
           npm install
           npm run build
 
+      - name: Setup gcloud
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
       - name: Deploy
         uses: google-github-actions/upload-cloud-storage@main
         with:
