--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,11 +17,15 @@ jobs:
           npm install
           npm run build
 
-      - name: Setup gcloud
-      - uses: google-github-actions/setup-gcloud@master
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
         with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
+      - name: Use gcloud CLI
+        run: gcloud info
 
       - name: Deploy
         uses: google-github-actions/upload-cloud-storage@main
