chore: website deploy action

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Deploy
         uses: google-github-actions/upload-cloud-storage@main
         with:
-          path: ./Frontend.Website/
+          path: ./Frontend.Website
           destination: side_projects_public/vision_website
