--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,31 +1,26 @@
 name: Deploy Website
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  build:
-    name: Build & Deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
 
-      - name: Install & Build
+      - name: Install and Build 🔧
         run: |
-          cd ./Frontend.Website
+          cd Frontend.Website
           npm install
           npm run build
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.5.9
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-
-      - name: Deploy
-        uses: google-github-actions/upload-cloud-storage@main
-        with:
-          path: /Frontend.Website/out
-          destination: side_projects_public/vision_website
+          GITHUB_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: out
