--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          cd Frontend.Website
+          cd frontend.website
           npm install
           npm run build
 
@@ -22,4 +22,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
-          folder: Frontend.Website/out
+          folder: frontend.website/out
