--- a/frontend.website/package.json
+++ b/frontend.website/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/react": "17.0.9",
     "@types/styled-components": "^5.1.10",
+    "babel-plugin-styled-components": "^1.13.2",
     "typescript": "4.3.2"
   }
 }
