--- a/frontend.website/package.json
+++ b/frontend.website/package.json
@@ -17,6 +17,8 @@
     "@types/react": "17.0.9",
     "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "typescript": "4.3.2"
   }
 }
